-New import/export format to share cards, which also bundles the media files.
 Supports importing an updated version of the same exported cards, so that
 authors can release updated versions of their cards fixing e.g. spelling
 mistakes.
-Fix bug where active tags would sometimes not have a checkbox in the card
 browser (reported by Gnome).
-Made RTL handling for Arabic and Hebrew more robust.
-audio tags now support start and stop arguments, e.g. <audio ...
 start="1" stop="2"> will play the sound file from 1 to 2 seconds.
-Fix crash when cancelling duplicate insertion while converting cards
 (reported by Gnome).
-Fix for rare hangs 'assert interval == 0' (reported by Tom Cato).
-Translation fixes when converting between card types (reported by Gnome and
 Chris Schmidt).
-Make terminology in 'Current card' statistics more consistent with the card
 browser (reported by Henrik Giaever).


Mnemosyne 2.0.1 : 2012-08-02

-Fix occasional hang during review (Thanks to Scott Youngman and Chris Shanks
 for helping to debug this).
-In cloze card types, you can now provide hints, e.g. [cloze:hint] will show
 [hint] in the question as opposed to [...]
-Added Sentence card type plugin. If you put this in the 'Sentence' field:
 "La [casa:house] es [grande:big]", you'll get three sister cards with the
 following questions: "La casa es grande", "La [house] es grande",
 "La casa es [big]"
-Fix bug where the wrong clone would be renamed (reported by Herman Gunn).
-Take size of media player widget (Linux only) into account when calculating
 the optimal split between question and answer.
-Fixed bug where card appearance settings would not be synced between different
 machines.
-Fixed issue in Activate cards, where a set without a name and a saved set
 would interfere.
-The dialog where you name saved sets is now a combobox which also list the
 current saved sets, to allow for easier updating of a saved set.