@@ -9,7 +9,7 @@ import subprocess
 
 from mnemosyne.libmnemosyne.filter import Filter
 
-re_audio = re.compile(r"""<audio src=\"(.+?)\"(.*)>""",
+re_audio = re.compile(r"""<audio src=\"(.+?)\"(.*?)>""",
     re.DOTALL | re.IGNORECASE)
 re_start = re.compile(r"""start=\"(.+?)\"""",
     re.DOTALL | re.IGNORECASE)
